--- a/style.css
+++ b/style.css
@@ -272,7 +272,122 @@ p {
     background-color: var(--color-grey);
 }
 
-.tools, 
+.tools,
 .etc {
     padding: 20px;
+}
+
+/* --------Work--------*/
+.category__btn {
+    border: 1px solid var(--color-dark-white);
+    border-radius: var(--size-border-radius);
+    font-size: var(--font-regular);
+    padding: 8px 48px;
+}
+
+.work__categories {
+    margin: 40px;
+}
+
+/* 버튼이 활성화 돼있거나 커서가 가리킬때*/
+.category__btn.active,
+.category__btn:hover {
+    background-color: var(--color-blue-light);
+    transition: var(--animation-duration);
+}
+
+/*
+카테고리 버튼이 활성화 될때랑
+카테고리 버튼위에 커서가 올라가있을때만
+카테고리 카운트에 적용되는 CSS
+*/
+.category__btn.active .category__count,
+.category__btn:hover .category__count {
+    opacity: 1; /*투명도 0 ~ 1*/
+    top: 0;
+}
+
+.category__count {
+    opacity: 0;
+    background-color: var(--color-dark-grey);
+    border-radius: 50%;
+    color: var(--color-white);
+    width: 24px;
+    height: 24px;
+    line-height: 24px; /*숫자를 중간에 정렬*/
+    display: inline-block; /*원을 동그랗게 만들자*/   
+    position: relative;
+    top: -20px;
+    left: 4px;
+    transition: all var(--animation-duration) ease-in;
+}
+
+.work__projects {
+    display: flex;
+    flex-wrap: wrpa;
+    justify-content: center;
+}
+
+.project {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 280px;
+    height: 250px;
+    margin: 2px;
+    background-color: var(--color-light-white);
+}
+
+.project:hover .project__description,
+.project:hover .project__description h3,
+.project:hover .project__description span{
+    opacity: 0.7;
+    transform: translateY(0px);
+}
+
+.project__img { /*project__img는 project를 넘어갈 수 없다*/
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.project__description {
+    /*
+    position: absolute를 쓰게되면 근접한 부모노드 중에서
+    position이 static이 아닌 첫번째 부모를 기준으로 작동하기 때문에
+    부모노드의 position을 잘 설정해주자
+    */
+    position: absolute;
+    background-color: black;    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    opacity: 0;    
+    transition: all 200ms ease-in;
+}
+
+.project__description h3 {
+    color: var(--color-white)
+}
+
+.project__description h3,
+.project__description span{
+    transform: translateY(15px);
+    transition: all 200ms ease-in;
+}
+
+.project__description h3:after {
+    content: '';
+    display: block;
+    position: relative;
+    left: 50%;
+    width: 25px;
+    height: 2px;
+    margin-left: -12px;
+    margin-top: 8px;
+    background-color: var(--color-dark-white);
 }
