--- a/style.css
+++ b/style.css
@@ -391,3 +391,48 @@ p {
     margin-top: 8px;
     background-color: var(--color-dark-white);
 }
+
+/* Testimonial */
+#testimonials {
+    background-color: var(--color-light-white);    
+}
+
+.testimonials {
+    margin: 40px;    
+}
+
+.testimonial {
+    display: flex;
+    margin: 32px 0;
+}
+
+.testimonial__avatar {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+}
+
+.testimonial__avatar:nth-child(odd) { /*홀수*/
+    margin-right: 40px;
+}
+.testimonial__avatar:nth-child(even) { /*짝수*/
+    margin-left: 40px;
+}
+
+.testimonial__speech-bubble {
+    padding: 18px;
+    background-color: var(--color-white);
+    border-radius: var(--size-border-radius);
+}
+
+.testimonial__speech-bubble p {
+    color: var(--color-light-grey);
+}
+
+.testimonial__speech-bubble a {
+    color: var(--color-blue-light);
+}
+
+.testimonial__speech-bubble a:hover {
+    color: var(--color-blue);
+}
