--- a/style.css
+++ b/style.css
@@ -392,7 +392,7 @@ p {
     background-color: var(--color-dark-white);
 }
 
-/* Testimonial */
+/* --------Testimonial-------- */
 #testimonials {
     background-color: var(--color-light-white);    
 }
@@ -436,3 +436,30 @@ p {
 .testimonial__speech-bubble a:hover {
     color: var(--color-blue);
 }
+
+/* Contact */
+#contact {
+    background-color: var(--color-blue-light);
+}
+
+.contact__title,
+.contact__email,
+.contact__rights {
+    color: var(--color-white);
+}
+
+.contact__title {
+    margin: 32px 0;
+}
+
+.contact__links i{
+    font-size: var(--font-large);
+    margin: 24px 0;    
+    transition: all var(--animation-duration) ease-in;    
+}
+
+.contact__links i:hover {
+    transform: scale(1.1);
+    color: var(--color-blue);    
+}
+
