--- a/style.css
+++ b/style.css
@@ -126,6 +126,16 @@ p {
     transition: 0.5s;
 }
 
+.navbar__toggle-btn {
+    position:absolute;
+    top: 24px;
+    right: 32px;
+    font-size: 24px;
+    color: var(--color-white);
+    display: none;
+}
+
+/* --------Home--------*/
 #home {
     background: url('imgs/background.jpg') center/cover no-repeat;
     padding: 40px;
@@ -463,3 +473,42 @@ p {
     color: var(--color-blue);    
 }
 
+/*-------- 반응형-모바일 --------*/
+@media screen and (max-width:768px) {
+    .navbar__toggle-btn {
+        display: block;
+    }
+
+    #navbar {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .navbar__menu {
+        flex-direction: column;
+        text-align: center;
+        width: 100%;
+        display: none;
+    }
+
+    .about__majors {
+        flex-direction: column;                
+    }
+
+    .major {
+        margin-bottom: 38px;
+    }
+
+    .skillset {
+        flex-direction: column;
+    }
+
+    .project {
+        flex-grow: 1;
+    }
+
+    .testimonial__avatar {
+        width: 80px;
+        height: 80px;
+    }
+}
