--- a/style.css
+++ b/style.css
@@ -183,6 +183,13 @@ p {
     border: 2px solid var(--color-white);
     border-radius: var(--size-border-radius);
     color: var(--color-white);
+    transition: all var(--animation-duration) ease-in;
+}
+
+.home__contact:hover {
+    background-color: var(--color-blue);
+    color: var(--color-black);
+    border: 2px solid var(--color-blue);
 }
 
 /* --------Section common--------*/
