JS:Home container scroll opacity

--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ p {
     padding-top: 8px;    
     background-color: transparent;    
     transition: all var(--animation-duration) ease-in-out;
+    z-index: 2;
 }
 
 #navbar.navbar--dark{
