--- a/style.css
+++ b/style.css
@@ -133,16 +133,13 @@ p {
     padding: 8px 12px;
     margin: 0 4px;
     cursor: pointer; /*마우스 올렸을때 손가락모양*/
-}
-
-.navbar__menu__item.active { /*메뉴가 클릭됐을때*/
-    border: 1px solid white;
-    border-radius: var(--size-border-radius);
+    border: 1px solid transparent;
 }
 
 .navbar__menu__item:hover {
-    background-color: var(--color-blue-light);
+    border: 1px solid var(--color-white);
     color: var(--color-dark-grey);
+    background-color: var(--color-blue-light);    
     border-radius: var(--size-border-radius);
     transition: 0.5s;
 }
@@ -329,7 +326,7 @@ p {
 }
 
 /* 버튼이 활성화 돼있거나 커서가 가리킬때*/
-.category__btn.active,
+.category__btn.selected,
 .category__btn:hover {
     background-color: var(--color-blue-light);
     transition: var(--animation-duration);
@@ -340,7 +337,7 @@ p {
 카테고리 버튼위에 커서가 올라가있을때만
 카테고리 카운트에 적용되는 CSS
 */
-.category__btn.active .category__count,
+.category__btn.selected .category__count,
 .category__btn:hover .category__count {
     opacity: 1; /*투명도 0 ~ 1*/
     top: 0;
