--- a/style.css
+++ b/style.css
@@ -193,7 +193,7 @@ p {
 /* --------Section common--------*/
 
 .section { /*섹션 공통*/
-    padding: 50px;
+    padding: 70px;
     text-align: center;    
     margin: auto;
 }
@@ -487,6 +487,11 @@ p {
 /* Contact */
 #contact {
     background-color: var(--color-blue-light);
+    padding: 20px 0;
+}
+#contact h1,
+#contact p {
+    margin: 10px;
 }
 
 .contact__title,
@@ -535,6 +540,29 @@ p {
 
 /*-------- 반응형-모바일 --------*/
 @media screen and (max-width:768px) {
+    /* Font size */
+    :root {
+        --font-large: 48px;
+        --font-medium: 28px;
+        --font-regular: 18px;
+        --font-small: 16px;
+        --font-micro: 14px;
+    }
+    #contact h2 {
+        font-size: 20px;
+    }
+
+    #contact h1 {
+        padding: 0px;
+    }
+
+    h1 {
+        padding-top: 20px;
+    }    
+
+    .testimonials {
+        margin: auto;
+    }
     .navbar__toggle-btn {                
         display: block;
     }
@@ -560,24 +588,62 @@ p {
         display: block;
     }
 
+    .section {
+        padding: 16px;
+    }
+
     .about__majors {
-        flex-direction: column;                
+        flex-direction: column;          
+        margin-bottom: 0px;      
     }
 
     .major {
-        margin-bottom: 38px;
+        margin-bottom: 30px;
     }
 
     .skillset {
         flex-direction: column;
     }
 
+    .category__btn {
+        margin: 4px 0;
+        width: 100%;
+    }
+
     .project {                   
         /* flex-grow: 1;         */
     }
 
+    .testimonial {
+        flex-direction: column;
+        align-items: center;
+    }
+
     .testimonial__avatar {
-        width: 80px;
-        height: 80px;
+        width: 120px;
+        height: 120px;        
+    }
+
+    .testimonial__avatar:nth-child(odd),
+    .testimonial__avatar:nth-child(even) {
+        margin: 0;
+        margin-bottom: 8px;
+    }
+
+    .testimonial__speech-bubble {
+        order: 1;
+    }
+
+    .arrow-up {
+        width: 50px;
+        height: 50px;
+        font-size: 30px;
+        line-height: 50px;
+        right: 8px;
+        bottom: 8px;
+    }
+    
+    .navbar__toggle-btn {
+        right: 10px;
     }
 }
