--- a/style.css
+++ b/style.css
@@ -423,7 +423,7 @@ p {
 .project:hover .project__description,
 .project:hover .project__description h3,
 .project:hover .project__description span{
-    opacity: 0.75;
+    opacity: 1;
     transform: translateY(0px);
 }
 
@@ -439,7 +439,7 @@ p {
     부모노드의 position을 잘 설정해주자
     */
     position: absolute;
-    background-color: black;    
+    background-color: #00000099;    
     display: flex;
     flex-direction: column;
     justify-content: center;
